--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
       <script src="./js/jquery-1.9.1.min.js" type="text/javascript"></script>
       <style type="text/css"></style>
       <script src="./js/RandomPic_cnt.js" type="text/javascript"></script>
-	  <link rel="stylesheet" type="text/css" href="css/style.css" />
-	  <script type="text/javascript" src="js/modernizr.custom.26633.js"></script>
-	  <noscript>
-		  <link rel="stylesheet" type="text/css" href="css/fallback.css" />
-	  </noscript>
+	  
+       <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+	   <script src="js/mobilyslider.js" type="text/javascript"></script>
+	   <script src="js/init.js" type="text/javascript"></script>
+
+
    </head>
    <body>
 
@@ -37,92 +38,28 @@
        
       <br></br>
 
-      <section class="main">
-
-          <div id="ri-grid" class="ri-grid ri-grid-size-1 ri-shadow">
-			    <img class="ri-loading-image" src="images/loading.gif"/>
-			    <ul>
-				    <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/4.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/5.jpg"/></a></li>
-                     <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/4.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/5.jpg"/></a></li>
-                    <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/4.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/5.jpg"/></a></li>
-                    <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/4.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/5.jpg"/></a></li>
-                    <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/4.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/5.jpg"/></a></li>
-                     <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/4.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/5.jpg"/></a></li>
-                    <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/4.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/5.jpg"/></a></li>
-                    <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/4.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/5.jpg"/></a></li>
-                    <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/4.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/5.jpg"/></a></li>
-                     <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/4.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/5.jpg"/></a></li>
-                    <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/4.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/5.jpg"/></a></li>
-                    <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/4.jpg"/></a></li>
-				    <li><a href="#"><img src="images/medium/5.jpg"/></a></li>
-			    </ul>
-		    </div>				
-	    </section>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script type="text/javascript" src="js/jquery.gridrotator.js"></script>
-		<script type="text/javascript">	
-			$(function() {
-			
-				$( '#ri-grid' ).gridrotator( {
-					w320 : {
-						rows : 3,
-						columns : 4
-					},
-					w240 : {
-						rows : 3,
-						columns : 3
-					}
-				} );
-			
-			});
-		</script>
+       <div id="content">
+	
+	        <div class="slider slider3">
+		        <div class="sliderContent">
+			        <div class="item">
+				        <img src="img/medium/1.jpg" alt="" />
+			        </div>
+			        <div class="item">
+				        <img src="img/medium/2.jpg" alt="" />
+			        </div>
+			        <div class="item">
+				        <img src="img/medium/3.jpg" alt="" />
+			        </div>
+			        <div class="item">
+				        <img src="img/medium/4.jpg" alt="" />
+			        </div>
+			        <div class="item">
+				        <img src="img/medium/5.jpg" alt="" />
+			        </div>
+		        </div>
+	        </div>
+      </div>
        
       <!--<img src="./data/wedding/IMG_3413.jpg"
            alt="Тут потом будет листалка. Пока так:)"/>
